styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Oswald", sans-serif;
  scroll-behavior: smooth;
  overflow-x: hidden;
}

.navbar {
  background: linear-gradient(to bottom, #0673b6, #000000);
  height: 150px;
  display: flex;
  justify-content: center;
  align-items:center;
  font-size: 1.3rem;
  position: relative;
  text-align: center;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1;
  font-family: "Trirong", serif;
}  

.topbar {
  background: linear-gradient(to bottom, #000000, #0673b6);
  height: 200px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.2rem;
  position: sticky;
  top: 0;
  z-index: 999;
  /* display: none; */
}  

.navbar__container {
  display: flex;
  justify-content:center;
  align-items: center;
  text-align: center;
  height: 80px;
  z-index: 1;
  width: 100%;
  max-width: 1300px;
  margin: 0 auto;
  padding: 0 25px;
  box-sizing: border-box;
}

@media screen and (max-width: 480px) {
  .navbar__container {
    display: flex;
    justify-content:center;
    align-items: center;
    text-align: center;
    height: 80px;
    z-index: 1;
    width: auto;
    padding: 0 0px;
    box-sizing: border-box;
  }
  .navbar__links {
    color: #fff;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 125px;
    text-decoration: none;
    height: 100%;
    transition: all 0.3s ease;
    margin: 0 -15px;

  }
}




#navbar__logo {
  background-color: #ff8177;
  background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  display: flex;
  align-items: center;
  cursor: pointer;
  text-decoration: none;
  font-size: 2rem;
}

.navbar__menu {
  display:flex;
  align-items: center;
  list-style: none;
}

.navbar__item {
  height: 80px;
  align-items: center;
}

.navbar__links {
  color: #fff;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 125px;
  text-decoration: none;
  height: 100%;
  transition: all 0.3s ease;
}

.navbar__btn {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 1rem;
  width: 100%;
}

.navbar.fixed {
  position: fixed;
  top: 0;
  width: 100%;
}

.button {
  display: flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  padding: 10px 20px;
  height: 100%;
  width: 100%;
  border: none;
  outline: none;
  border-radius: 4px;
  background: #833ab4;
  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
  background: linear-gradient(to right, #45c2fc, #1d42fd, #000000);
  color: #fff;
  transition: all 0.3s ease;
}

.navbar__links:hover {
  color: #221bfa;
  transition: all 0.3s ease;
}

.logo {
  background: #000000;
  padding: 200px 0;
}

.logo__container {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 1300px;
  margin: 0 auto;
  height: auto;
  text-align: center;
  padding: 15px;
}
.responsive {
  width: 45%;
  height: auto;
}

.responsive3 {
  width: 70%;
  height: auto;
}

.responsive4 {
  width: 60%;
  height: auto;
  align-self: center;
}
.responsive5 {
  width: 20%;
  height: auto;
  
}

.box {
  align-self: flex-end;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  height: auto;
  margin: 0 auto 0 auto;
  transform-origin: bottom;
  
}

.bounce-2 {
  animation-name: bounce-2;
  animation-timing-function: ease;
  animation-duration: 4s;
 
}
@keyframes bounce-2 {
  0% {
    transform: translate(0, 0) rotate(0deg);
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
  }
  50% {
    transform: translate(0, -20px) rotate(5deg);
    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
  }
  100% {
    transform: translate(0, 0) rotate(0deg);
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
  }
}

.bounce-3 {
  animation-name: bounce-3;
  animation-timing-function: ease;
}
@keyframes bounce-3{
  0%   { transform: translateY(0); }
  50%  { transform: translateY(-100px); }
  100% { transform: translateY(0); }
}

.bounce-4 {
  animation-name: bounce-4;
  animation-timing-function: ease;
  animation-duration: 4s;
 
}
@keyframes bounce-4 {
  0% {
    transform: translate(0, 0) rotate(0deg);
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
  }
  50% {
    transform: translate(0, -20px) rotate(0deg);
    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
  }
  100% {
    transform: translate(0, 0) rotate(0deg);
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
  }
}


.responsive2 {
  width: 5%;
  height: auto;

}

/* Home Section */
.hero {
  background: #000000;
  padding: 200px 0;
}

.hero__container {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 1200px;
  margin: 0 auto;
  height: 90%;
  text-align: center;
  padding: 30px;
}

.hero__container h1 {
  background-color: #ffffff;
  background-image: linear-gradient(to right, #ffffff 0%, #ffffff 100%);
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  margin-bottom: 2rem;
  align-items: center;
  font-size: 1.0rem;
}

.hero__heading {
  font-size: 100px;
  margin-bottom: 24px;
  color: #fff;
}

.hero__heading span {
  background: #ee0979; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to right,
    #ff6a00,
    #ee0979
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to right,
    #ff6a00,
    #ee0979
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -mo-text-fill-color: transparent;
}
/* ... */

